fix text spacings

--- a/src/components/common/employees/Employee.module.scss
+++ b/src/components/common/employees/Employee.module.scss
@@ -4,7 +4,7 @@
       @apply border border-accent-1 w-full rounded-basic;
    }
    .name {
-      @apply mt-4 text-xl font-semibold text-text-1;
+      @apply mt-4 text-xl font-medium text-text-1;
    }
    .position {
       @apply mt-1 text-sm text-text-2;
